[package]
name = "wl-macro"
version = "0.1.0"
authors = ["AidoP <aidop@me.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full" ] }
quote = "1.0"

serde = { version = "1.0", features = [ "derive" ] }
toml = { version = "0.5" }
heck = "0.3.2"
